# ProjectBraille

./: README.md  pyproject.toml
projectbraille/: UI_Principal.py  UI_Principal.ui  braille.py  main.py
tests/: test_projectbraille.py
