[tool.poetry]
name = "ProjectBraille"
version = "0.1.0"
description = ""
authors = ["Antonio Aguilera <antonio.aguilerimon@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
PySide2 = "^5.15.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
